// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderTotals/> render() should render as loading 1`] = `
<dl
  className="row text-right mb-0"
>
  <dt
    className="col-7 mb-2 grey"
  >
    Subtotal
  </dt>
  <dd
    className="col-5 mb-2 text-muted"
  >
    <ShopifyMoneyAmount
      amount="1.00"
      currencyCode="USD"
      negative={false}
      renderIfZero={true}
    />
  </dd>
  <dt
    className="col-7 mb-2 grey"
  >
    Discounts
  </dt>
  <dd
    className="col-5 mb-2 text-muted"
  >
    <ShopifyMoneyAmount
      amount="0.00"
      currencyCode="USD"
      negative={true}
      renderIfZero={false}
    />
  </dd>
  <dt
    className="col-7 mb-2 grey"
  >
    Tax
  </dt>
  <dd
    className="col-5 mb-2 text-muted"
  >
    <ShopifyMoneyAmount
      amount="0.20"
      currencyCode="USD"
      negative={false}
      renderIfZero={false}
    />
  </dd>
  <dt
    className="col-7 mb-2 grey"
  >
    Total available to refund
  </dt>
  <dd
    className="col-5 mb-2"
  >
    <ShopifyMoneyAmount
      amount="1.20"
      currencyCode="USD"
      negative={false}
      renderIfZero={true}
    />
  </dd>
</dl>
`;

exports[`<OrderTotals/> render() should render as not loading 1`] = `
<dl
  className="row text-right mb-0"
>
  <dt
    className="col-7 mb-2 grey"
  >
    Subtotal
  </dt>
  <dd
    className="col-5 mb-2"
  >
    <ShopifyMoneyAmount
      amount="1.00"
      currencyCode="USD"
      negative={false}
      renderIfZero={true}
    />
  </dd>
  <dt
    className="col-7 mb-2 grey"
  >
    Discounts
  </dt>
  <dd
    className="col-5 mb-2"
  >
    <ShopifyMoneyAmount
      amount="0.00"
      currencyCode="USD"
      negative={true}
      renderIfZero={false}
    />
  </dd>
  <dt
    className="col-7 mb-2 grey"
  >
    Tax
  </dt>
  <dd
    className="col-5 mb-2"
  >
    <ShopifyMoneyAmount
      amount="0.20"
      currencyCode="USD"
      negative={false}
      renderIfZero={false}
    />
  </dd>
  <dt
    className="col-7 mb-2 grey"
  >
    Total available to refund
  </dt>
  <dd
    className="col-5 mb-2"
  >
    <ShopifyMoneyAmount
      amount="1.20"
      currencyCode="USD"
      negative={false}
      renderIfZero={true}
    />
  </dd>
</dl>
`;

exports[`<OrderTotals/> render() should render with shipping line 1`] = `
<dl
  className="row text-right mb-0"
>
  <dt
    className="col-7 mb-2 grey"
  >
    Subtotal
  </dt>
  <dd
    className="col-5 mb-2"
  >
    <ShopifyMoneyAmount
      amount="1.00"
      currencyCode="USD"
      negative={false}
      renderIfZero={true}
    />
  </dd>
  <dt
    className="col-7 grey mt-2"
  >
    <Label
      className="d-inline"
      for="shipping"
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      Shipping
       
      <span>
        (
        <ShopifyMoneyAmount
          amount="9.99"
          currencyCode="USD"
          negative={false}
          renderIfZero={true}
        />
         
        remaining)
      </span>
    </Label>
  </dt>
  <dd
    className="col-5 mb-2"
  >
    <AmountInput
      className="text-right"
      currencyCode="USD"
      disabled={false}
      id="shipping"
      max={9.99}
      min={0}
      onChange={[Function]}
      required={true}
      saveInputRef={[Function]}
      symbol={null}
      value="9.99"
    />
  </dd>
  <dt
    className="col-7 mb-2 grey"
  >
    Discounts
  </dt>
  <dd
    className="col-5 mb-2"
  >
    <ShopifyMoneyAmount
      amount="0.00"
      currencyCode="USD"
      negative={true}
      renderIfZero={false}
    />
  </dd>
  <dt
    className="col-7 mb-2 grey"
  >
    Tax
  </dt>
  <dd
    className="col-5 mb-2"
  >
    <ShopifyMoneyAmount
      amount="0.20"
      currencyCode="USD"
      negative={false}
      renderIfZero={false}
    />
  </dd>
  <dt
    className="col-7 mb-2 grey"
  >
    Total available to refund
  </dt>
  <dd
    className="col-5 mb-2"
  >
    <ShopifyMoneyAmount
      amount="1.20"
      currencyCode="USD"
      negative={false}
      renderIfZero={true}
    />
  </dd>
</dl>
`;
